--- a/index.html
+++ b/index.html
@@ -48,8 +48,21 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
-                        
-                        <button id="filter-btn" type="button" class="btn-dark">Filter Table</button>
+                      <label for="city">City</label>
+                      <input type="text" placeholder="City" id="city" />
+                    </li>
+                    </li>
+                    <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                      <label for="state">State</label>
+                      <input type="text" placeholder="State" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                      <label for="country">Country</label>
+                      <input type="text" placeholder="Country" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                      <label for="shape">Shape</label>
+                      <input type="text" placeholder="Shape" id="shape" />
                     </li>
                 </ul>
            </div>
